--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lite-server": "lite-server",
-    "webpack": "webpack",
-    "heroku-postbuild": "webpack -p",
-    "prestart": "npm run webpack"
+    "lite-server": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -26,9 +23,7 @@
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.9.24",
-    "morgan": "^1.9.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
